# oma-platform

./: .env  .env.example  .gitignore  Dockerfile.harness  MVP-MIGRATION-PLAN.md  README.md  docker-compose.yml  gitCommit.sh  go.mod  go.sum  readme-zh.md  smoke-test.sh  start-console.sh  start-harness.sh  start-platform.sh  start-platform[废除].sh
auth-sidecar/: package-lock.json  package.json  server.mjs
console/: package-lock.json  package.json
deploy/: Dockerfile.harness  Dockerfile.platform  docker-compose.yml  docker.sh
harness/: pyproject.toml
harness/oma_adapter/: __init__.py  compaction.py  emit.py  main.py  model_credentials.py  outcome_evaluator.py  platform_guidance.py  project.py  provider_env.py  resource_mounter.py  sandbox_paths.py  tools.py  turn.py  types.py
harness/oma_adapter/call_agent/: __init__.py  delegate.py  runtime.py  sub_turn.py
harness/oma_adapter/extensions/: call_agent.py  mcp_loader.py  web_fetch.py
harness/oma_adapter/mcp/: __init__.py  client.py  runtime.py  setup.py
harness/oma_adapter/outbound/: __init__.py  setup.py
harness/oma_adapter/web_fetch/: __init__.py  core.py  runtime.py  summarize.py  to_markdown.py
harness/tests/: test_call_agent.py  test_compaction.py  test_emit_usage.py  test_mcp.py  test_model_credentials.py  test_oma_contract.py  test_outbound.py  test_outcome_evaluator.py  test_platform_guidance.py  test_project.py  test_resource_live_harness.py  test_resource_mounter.py  test_sandbox_paths.py  test_subagent_e2e.py  test_subagent_live_harness.py  test_tools.py  test_turn.py  test_turn_stream.py  test_web_fetch.py  test_web_fetch_extension.py  test_web_fetch_summarize.py
harness/tests/fixtures/oma_contract/: emit_assistant_message.json  emit_tool_chain.json  emit_tool_result.json  emit_tool_use.json  oma_user_message_shape.json  project_latest_user.json  project_skips_lifecycle.json
migrations/: 001_core.sql
scripts/: build-console.sh  console-auth-e2e.mjs  console-comprehensive-e2e.mjs  console-dogfood.mjs  console-integration.sh  console-ui-check.mjs  go-env.sh  mock-mcp-server.py  mock-outbound-server.py  package-lock.json  package.json  run-console-qa-auth.sh  runtime-acp-probe.mjs  smoke-github-webhook.sh  smoke-internal-model-key.sh  smoke-linear-webhook.sh  smoke-mcp-e2e.sh  smoke-outbound-e2e.sh  smoke-outbound-proxy.sh  smoke-resource-live-e2e.sh  smoke-runtime-e2e.sh  smoke-slack-webhook.sh  smoke-subagent-e2e.sh  smoke-subagent-live-e2e.sh  smoke-t13-e2e.sh  smoke-t14-e2e.sh  smoke-t15-e2e.sh  (+2 more)
(+263 files in other folders)
