[project]
name = "oma-harness"
version = "0.1.0"
description = "OMA piPy harness sidecar"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "pi-coding-agent",
  "pi-ai",
]

[tool.uv.sources]
pi-coding-agent = { path = "../../../piPy-env/piPy/packages/pi_coding_agent", editable = true }
pi-ai = { path = "../../../piPy-env/piPy/packages/pi_ai", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oma_adapter"]
