[project]
name = "oma-harness"
version = "0.1.0"
description = "OMA piPy harness sidecar"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "markdownify>=0.14.0",
  "pi-coding-agent",
  "pi-ai",
  "mcp>=1.27.2",
]

[tool.uv.sources]
pi-coding-agent = { git = "https://gitee.com/www6v6v/piPy.git", branch = "v0.2.0", subdirectory = "packages/pi_coding_agent" }
pi-ai = { git = "https://gitee.com/www6v6v/piPy.git", branch = "v0.2.0", subdirectory = "packages/pi_ai" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: real oma-server + harness integration (requires OMA_FAKE_HARNESS=0)",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-httpx>=0.35.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oma_adapter"]
